update logo to fix whitespace

--- a/src/styles.css
+++ b/src/styles.css
@@ -112,8 +112,8 @@ body {
 }
 
 .logo {
-  height: 40px;
-  width: 40px;
+  height: 20px;
+  width: 20px;
 }
 
 .drag-bar {
